# genqa

./: .gitignore  README.md  pyproject.toml  requirements.txt
genqa/: __init__.py  extract.py  make_csv.py
genqa/src/: convert.py  extract.py
